TEZ-1951. Fix general findbugs warnings in tez-dag. (hitesh)